--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "polynomials_pro"
 version = "0.1.0"
 edition = "2021"
-
+repository="https://github.com/jacks0n9/polynomials_pro.git"
+authors=["starryuwu"]
+readme="README.md"
+license="LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
