fix license some more

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository="https://github.com/jacks0n9/polynomials_pro.git"
 authors=["starryuwu"]
 readme="README.md"
 license-file="LICENSE"
+license="MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
